<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="25dp"
    android:paddingStart="25dp"
    android:paddingEnd="@dimen/page_padding"
    android:background="@color/green_theme_color"
    android:orientation="vertical"
    tools:context=".entries.EntryListFragment"
    app:flow_verticalGap="10dp">

    <ImageView
        android:id="@+id/back_arrow_in_prompts_specific"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/back_arrow_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/my_entries_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="@dimen/title_size"
        android:text="@string/Prompts"/>

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:src="@drawable/cat_logo"
        android:layout_gravity="center"
        android:contentDescription="@string/mascot_image"/>

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/light_brown_theme_color">
            <Button
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category_name"
                android:clickable="false"
                android:textColor="@android:color/white"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size"
                app:backgroundTint="@color/light_brown_theme_color"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/questions"
        android:name="edu.sjsu.android.jams.PromptCategoryContentFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_theme_color"
        app:layoutManager="LinearLayoutManager"
        tools:context=".entries.EntryListDateContent"
        tools:listitem="@layout/fragment_prompt_question_content" />

</LinearLayout>